<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name_explained">ShoprEx</string>
    <string name="app_name">Shopr</string>
    <string name="action_settings">Settings</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_list">Recommendations</string>
    <string name="title_map">Shops</string>
    <string name="title_mind_map">Mind Map</string>
    <string name="reason_empty">Close to you, store open</string>
    <string name="like">I like something about this item</string>
    <string name="dislike">I dislike something this item</string>
    <string name="favourite">This is what I am looking for!</string>
    <string name="description_item_picutre">Clothing item</string>
    <string name="title_activity_critique">Critique</string>
    <string name="detail_like">What do you like about \"%s\" and want to see more of?</string>
    <string name="detail_dislike">What do you not like about \"%s\" and want to see less of?</string>
    <string name="update_recommendations">Update recommendations</string>
    <string name="task_results_exit">OK</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="label">Label</string>
    <string name="type">Type</string>
    <string name="sex">Sex</string>
    <string name="action_restart">Start over</string>
    <string name="getting_your_location">Getting your location…</string>
    <string name="loading_your_favourites">Loading your favourites…</string>
    <string name="favourite_list_empty">You haven\'t favourited anything yet. Why not discover now?</string>
    <string name="has_x_recommendations">sells %s recommended item</string>
    <string name="title_activity_importer">Importer</string>
    <string name="import_items">Import items</string>
    <string name="import_shops">Import shops</string>
    <string name="import_no_file_manager">Importing requires a file manager to be installed.</string>
    <string name="import_a_csv_file">Import a CSV file</string>
    <string name="action_import">Import data</string>
    <string name="import_start">Importing…</string>
    <string name="import_successful">Import successful.</string>
    <string name="import_failed">Import failed.</string>
    <string name="last_critique">Last critique</string>
    <string name="use_fake_location">Use fake location</string>
    <string name="diversity_on_negative_progress">Diversity on negative progress</string>
    <string name="no_item_dropping">Also no recs exclusion</string>
    <string name="title_activity_test_setup">Test Setup</string>
    <string name="test_setup">Test Setup</string>
    <string name="start">Start</string>
    <string name="your_name_or_pseudonym">Your name or pseudonym</string>
    <string name="title_activity_results">Test Results</string>
    <string name="hello_world">Hello world!</string>
    <string name="thank_you_this_task_is_finished_">Thank you, this task is finished!</string>
    <string name="no_data">no data</string>
    <string name="task_type">Task type</string>
    <string name="duration">Duration</string>
    <string name="cycle_count">Cycle count</string>
    <string name="title_activity_item_details">Item Details</string>
    <string name="choice_confirmation">Are you happy with \"%s\"?</string>
    <string name="choice_instructions">If not, press back.</string>
    <string name="choice_finish">Select this and finish</string>
    <string name="your_selected_item">Your selected item</string>
    <string name="swim_suit">Swim suit</string>
    <string name="trunks">Trunks</string>
    <string name="blouse">Blouse</string>
    <string name="shirt">Shirt</string>
    <string name="trousers">Trousers</string>
    <string name="jeans">Jeans</string>
    <string name="dress">Dress</string>
    <string name="poloshirt">Poloshirt</string>
    <string name="sweater">Sweater</string>
    <string name="skirt">Skirt</string>
    <string name="shorts">Shorts</string>
    <string name="cardigan">Cardigan</string>
    <string name="top_t_shirt">Top/T-Shirt</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unisex">Unisex</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="colored">Colored</string>
    <string name="mixed">Mixed</string>
    <string name="grey">Grey</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="black">Black</string>
    <string name="turquoise">Turquoise</string>
    <string name="white">White</string>
    <string name="beige">Beige</string>
    <string name="less_than_25">less than 25 €</string>
    <string name="_25_to_50">25 to 50 €</string>
    <string name="_50_to_75">50 to 75 €</string>
    <string name="_75_to_100">75 to 100 €</string>
    <string name="_100_to_150">100 to 150 €</string>
    <string name="_150_to_200">150 to 200 €</string>
    <string name="_200_or_more">200 € or more</string>
    
    <string name="only"><b>only</b> %s</string>
    <string name="preferably"><b>preferably</b> %s</string>
    <string name="avoid"><b>avoid</b> %s</string>
    <string name="restart_test">Restart test</string>
    <string name="selection_hint">Select one or more</string>
    
    <string name="mind_map_definition">Below is your inferred <b>current preferences</b> that are used to recommend you clothes from <b>nearby shops</b>.
         You can <b>update</b> them anytime you want by <b>tapping</b> on them.</string>
    
    <string name="mind_map_hint_change_preference">Hint: <b>Tap</b> on the chart to change your preference.</string>
    
    <string name="mind_map_section_color">Color</string>
    <string name="mind_map_section_clothing_type">Clothing type</string>
    <string name="mind_map_section_sex">Sex</string>
    <string name="mind_map_section_brand">Brand</string>
    <string name="mind_map_section_price_range">Price range</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="drawer_section_title_home">Recommendations</string>
    <string name="drawer_section_title_favourites">Favourites</string>
    <string name="drawer_section_title_mind_map">Mindmap</string>
    
    <string name="title_clothing_type_preferences">Clothing Type Preferences</string>
    <string name="title_color_preferences">Color Preferences</string>
    <string name="title_gender_preferences">Gender Preferences</string>
    <string name="title_price_range_preferences">Price Range Preferences</string>
    
    <string name="attribute_value_preference_update_explanation_attribute_value">You are not interested in &lt;b>%s&lt;/b>?</string>
    <string name="attribute_value_preference_update_explanation_start">Want to change your preference?&#160;</string>
    <string name="attribute_value_preference_update_explanation">Then select the %s(s) that you currently prefer the most right now.</string>
    <string name="update_preferences">Update preferences</string>
    
    
    <string name="explanation_template_on_dimension_strong_1">Mainly because you currently like %s.</string>
    <string name="explanation_template_on_dimension_strong_2">Mostly as you are currently interested in %s.</string>
    
    <string name="explanation_template_on_dimension_weak_1">Partially because you currently like %s.</string>
    <string name="explanation_template_on_dimension_weak_2">Partly as you are currently interested in %s.</string>
    
    <string name="explanation_template_on_dimension_weak_supporting_1">Also, slightly because of your current interest in %s.</string>
    
    <string name="explanation_template_context_location">And it is just &lt;b>%s m&lt;/b> away from you.</string>
    <string name="explanation_template_context_location_average">Plus it is quite near to you, only &lt;b>%s m&lt;/b> away.</string>
    
    <string name="explanation_template_on_dimension_high">Because you are currently interested in &lt;b>%s&lt;/b>.</string>
    
    <string name="explanation_template_average_item">This is an average item that you might like.</string>
    
    <string name="explanation_template_serendipidity_1">This might help us discovering your preferences.</string>
    <string name="explanation_template_serendipidity_2">Might let us learn about what you like.</string>
    <string name="explanation_template_serendipidity_3">A serendipitous item that you perhaps like .</string>
    
    <string name="explanation_template_negative">However, it has the following feature(s) you don\'t like: %s.</string>
    
    <string name="explanation_last_critique">Kept so that you can keep track of your critiques.</string>
    
    <string name="conjunction_And">And\u0020</string>
    <string name="conjunction_Also">Also\u0020</string>
    <string name="conjunction_Plus">Plus\u0020</string>
     <string name="conjunction_and">\u0020and\u0020</string>
    <string name="conjunction_also"> also\u0020</string>
    <string name="conjunction_plus"> plus\u0020</string>
    <string name="conjunction_comma">,\u0020</string>
    
    <string name="save_item_to_interests">Save this</string>
    <string name="delete_item_from_interests">Delete this</string>
    
    <string name="content_description_icon">Icon</string>
    
    <string name="explanation_on_preference_only_interested_in_some">You are currently interested &lt;i>only&lt;/i> in %s.</string>
    <string name="explanation_on_preference_avoiding_some">You are currently &lt;i>avoiding&lt;/i> %s.</string>
    <string name="explanation_on_preference_prefer_some">It seems, you currently prefer %s.</string>
    <string name="explanation_on_preference_indifferent">You are currently &lt;i>indifferent to&lt;/i> &lt;b>%s&lt;/b>.</string>
    
    <string name="user_position_you">You</string>
    <string name="user_position_definition">You are currently here.</string>
</resources>