<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background" >

    <FrameLayout
        android:id="@+id/containerItemPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/selectable_background_shopr" >

        <ImageView
            android:id="@+id/imageViewItemPicture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/description_item_picutre"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />
    </FrameLayout>

    <TextView
        android:id="@+id/textViewItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/containerItemPicture"
        android:ellipsize="end"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Small.Light" />

    <TextView
        android:id="@+id/textViewItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textViewItemName"
        android:ellipsize="end"
        android:lines="1"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.Small"
        android:textColor="@color/lilac" />

    <TextView
        android:id="@+id/textViewItemLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textViewItemName"
        android:layout_toLeftOf="@+id/textViewItemPrice"
        android:ellipsize="end"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:text="@string/label"
        android:textAppearance="@style/TextAppearance.Small.Dim" />

</RelativeLayout>